a bit more work on the simple california model

--- a/inputs/YAML Samples/components/Gear.yaml
+++ b/inputs/YAML Samples/components/Gear.yaml
@@ -66,6 +66,10 @@ Heterogeneous Selectivity Gear:
   gears: {
     }
 -------
+Abundance Fixed Proportion Gear:
+  averageCatchability: '1.0E-4'
+  litersOfGasConsumed: '0.0'
+-------
 Garbage Gear:
   delegate:
     Fixed Proportion:
