--- a/inputs/YAML Samples/scenario/California Map Scenario.yaml
+++ b/inputs/YAML Samples/scenario/California Map Scenario.yaml
@@ -15,6 +15,7 @@ California Map Scenario:
       backtracksOnBadExploration: true
       dropInUtilityNeededForUnfriend: '-1.0'
       ignoreEdgeDirection: true
+      ignoreFailedTrips: false
       objectiveFunction:
         Hourly Profit Objective:
           opportunityCosts: true
