--- a/inputs/YAML Samples/components/DestinationStrategy.yaml
+++ b/inputs/YAML Samples/components/DestinationStrategy.yaml
@@ -20,6 +20,7 @@ Imitator-Explorator:
   backtracksOnBadExploration: true
   dropInUtilityNeededForUnfriend: '-1.0'
   ignoreEdgeDirection: true
+  ignoreFailedTrips: false
   objectiveFunction:
     Hourly Profit Objective:
       opportunityCosts: true
