--- a/inputs/YAML Samples/scenario/Abstract 2 Populations.yaml
+++ b/inputs/YAML Samples/scenario/Abstract 2 Populations.yaml
@@ -1,4 +1,5 @@
 Abstract 2 Populations:
+  allowTwoPopulationFriendships: false
   biologyInitializer:
     Diffusing Logistic:
       carryingCapacity: '5000.0'
@@ -23,6 +24,7 @@ Abstract 2 Populations:
       backtracksOnBadExploration: true
       dropInUtilityNeededForUnfriend: '-1.0'
       ignoreEdgeDirection: true
+      ignoreFailedTrips: false
       objectiveFunction:
         Hourly Profit Objective:
           opportunityCosts: true
@@ -41,6 +43,7 @@ Abstract 2 Populations:
       backtracksOnBadExploration: true
       dropInUtilityNeededForUnfriend: '-1.0'
       ignoreEdgeDirection: true
+      ignoreFailedTrips: false
       objectiveFunction:
         Hourly Profit Objective:
           opportunityCosts: true
