--- a/inputs/YAML Samples/scenario/California Map Scenario.yaml
+++ b/inputs/YAML Samples/scenario/California Map Scenario.yaml
@@ -10,7 +10,7 @@ California Map Scenario:
   destinationStrategy:
     Imitator-Explorator:
       alwaysCopyBest: true
-      automaticallyIgnoreAreasWhereFishNeverGrows: false
+      automaticallyIgnoreAreasWhereFishNeverGrows: true
       automaticallyIgnoreMPAs: false
       backtracksOnBadExploration: true
       dropInUtilityNeededForUnfriend: '-1.0'
