--- a/inputs/tests/narrative/anarchy.yaml
+++ b/inputs/tests/narrative/anarchy.yaml
@@ -51,7 +51,7 @@ Abstract 2 Populations:
           incrementMultiplier: '0.02'
       stepSize: uniform 1.0 10.0
   enginePower: normal 5000.0 100.0
-  fishingStrategy:
+  fishingStrategySmall:
     Until Full With Day Limit:
       daysAtSea: '5.0'
   gasPricePerLiter: '0.05'
