--- a/inputs/YAML Samples/components/Regulation.yaml
+++ b/inputs/YAML Samples/components/Regulation.yaml
@@ -25,6 +25,10 @@ MPA with fine:
     topLeftY: 20
     width: 5
 -------
+MPA by depth:
+  maxDepth: '200.0'
+  minDepth: '0.0'
+-------
 Mono-TAC:
   quota: '500000.0'
 -------
