--- a/inputs/YAML Samples/scenario/Abstract 2 Populations.yaml
+++ b/inputs/YAML Samples/scenario/Abstract 2 Populations.yaml
@@ -1,4 +1,5 @@
 Abstract 2 Populations:
+  allowFriendshipsBetweenPorts: false
   allowTwoPopulationFriendships: false
   biologyInitializer:
     Diffusing Logistic:
