--- a/inputs/YAML Samples/scenario/California Map Scenario.yaml
+++ b/inputs/YAML Samples/scenario/California Map Scenario.yaml
@@ -8,24 +8,16 @@ California Map Scenario:
     Fixed Rest:
       hoursBetweenEachDeparture: '12.0'
   destinationStrategy:
-    Imitator-Explorator:
-      alwaysCopyBest: true
-      automaticallyIgnoreAreasWhereFishNeverGrows: true
-      automaticallyIgnoreMPAs: false
-      backtracksOnBadExploration: true
-      dropInUtilityNeededForUnfriend: '-1.0'
-      ignoreEdgeDirection: true
-      ignoreFailedTrips: false
-      objectiveFunction:
-        Hourly Profit Objective:
-          opportunityCosts: true
-      probability:
-        Adaptive Probability:
-          explorationProbability: '0.2'
-          explorationProbabilityMinimum: '0.01'
-          imitationProbability: '1.0'
-          incrementMultiplier: '0.02'
-      stepSize: uniform 1.0 10.0
+    Continuous Bare Bones:
+      discretizer:
+        Centroid File Discretization:
+          automaticallyIgnoreWastelands: true
+          filePath: inputs/california/logit/centroids_utm10N.csv
+          xColumnName: eastings
+          yColumnName: northings
+      distanceInKm: '-0.0135515257873626'
+      habitIntercept: '0.282719257782064'
+      habitPeriodInDays: '365.0'
   exogenousCatches:
     Sablefish: '4438200.0'
     Dover Sole: '676900.0'
@@ -34,7 +26,15 @@ California Map Scenario:
       daysAtSea: '5.0'
   fixedRecruitmentDistribution: false
   fuelTankInLiters: '45519.577'
-  gasPricePerLiter: '0.89991382'
+  gasPriceMaker:
+    Gas Price from File:
+      columnNumber: 1
+      csvFile: inputs/california/2010_gasprice.csv
+      headerInFile: true
+      loopThroughTheCSV: false
+      scaling: 0.219969157
+      separator: ','
+      yearly: true
   gear:
     Garbage Gear:
       delegate:
@@ -101,10 +101,12 @@ California Map Scenario:
       proportionSimulatedToGarbage: '0.3221743'
   gearStrategy: Never Change Gear
   gridWidth: 50
-  holdSizePerBoat: '20000.0'
+  holdSizePerBoat: '8000.0'
   hourlyTravellingCosts: '151.45833333333334'
   literPerKilometer: '3.547842974'
+  logbook: No Logbook
   mainDirectory: inputs/california
+  mortalityAt100PercentForOldestFish: true
   networkBuilder:
     Equal Out Degree:
       allowMutualFriendships: true
@@ -113,7 +115,7 @@ California Map Scenario:
   portFileName: dts_ports_2011.csv
   priceMap: Dover Sole:0.6698922,Sablefish:4.3235295,Shortspine Thornyhead:1.0428510,Longspine Thornyhead:1.0428510,Yelloweye Rockfish:1.0754502,Others:1.7646181
   recruitmentNoise: '0.0'
-  regulation:
+  regulationPostReset:
     Multi-Quotas from Map:
       initialQuotas:
         Dover sole: 2.22345E7
@@ -121,7 +123,6 @@ California Map Scenario:
         Sablefish: 3077220.0
         Yelloweye rockfish: 600.0
         Longspine Thornyhead: 1966250.0
-      itq: true
       multipleTradesAllowed: false
       quotaExchangedPerMatch:
         Dover sole: 500.0
@@ -129,6 +130,8 @@ California Map Scenario:
         Sablefish: 500.0
         Yelloweye rockfish: 6.0
         Longspine Thornyhead: 500.0
-  resetBiologyAtYear: -1
+      quotaType: ITQ
+  regulationPreReset: Anarchy
+  resetBiologyAtYear1: true
   usePremadeInput: true
   weatherStrategy: Ignore Weather
