--- a/inputs/YAML Samples/components/FishingStrategy.yaml
+++ b/inputs/YAML Samples/components/FishingStrategy.yaml
@@ -4,6 +4,12 @@ Tow Limit:
   maxDaysOut: '5.0'
   towLimits: '100.0'
 -------
+Quota Bound:
+  decorated:
+    Tow Limit:
+      maxDaysOut: '5.0'
+      towLimits: '100.0'
+-------
 Fish Until Full:
   minimumPercentageFull: '1.0'
 -------
