Bunch of fixes to some very obscure bugs. There was always a problem with fixing the random seed and still having diverging (even though by very little) results. The cause was iterating over HashMaps and HashSets which looks innocuous but whose ordering changes between simulation runs. Obvious once explained but it was an hidden source of randomness indipendent of the random seed. It's should be all done now

--- a/build.gradle
+++ b/build.gradle
@@ -99,7 +99,7 @@ dependencies
 
 //this makes tests multi-threaded when called from gradle. Useful!
 test{
-        maxParallelForks = Math.min(Runtime.runtime.availableProcessors(),1)
+        maxParallelForks = Math.min(Runtime.runtime.availableProcessors(),3)
 }
 
 //this just mentions what the gradle version for the "wrapper" gradlew ought to be
@@ -130,12 +130,20 @@ task fatJar(type: com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
     }
 }
 
+task calicatchFatJar(type: com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
+    mergeServiceFiles()
+    archiveName = 'calicatch.jar'
+    from sourceSets.main.output //tells the task to include the project code
+    configurations = [ project.configurations.compile ] //tells the task to shadow in the jars files in the 'runtime' scope
+    manifest {
+        attributes 'Main-Class': 'uk.ac.ox.oxfish.experiments.CaliCatchCalibration'
+    }
+}
 
 
 
 //this task creates a single executable jar ("fat" because it contains all its requirements); this is mostly what gets
 //distributed
-
 task buildHeadless(type: com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
 
     mergeServiceFiles()
