--- a/build.gradle
+++ b/build.gradle
@@ -229,6 +229,13 @@ task algorithms(type:JavaExec){
 }
 
 
+//this task can be called as ./gradlew buildSampleFiles and simply rebuilds the "YAML Samples" folder
+task indirectinference(type: JavaExec){
+    classpath = sourceSets.main.runtimeClasspath
+    main = 'uk.ac.ox.oxfish.experiments.IndirectInferencePaper'
+    args = ["$scenario"]
+}
+
 task batch(type:JavaExec){
     main = 'uk.ac.ox.oxfish.gui.BatchRunnerSetup'
     classpath = sourceSets.main.runtimeClasspath
