indirect inference small modification to allow for resumes

--- a/inputs/YAML Samples/components/AcquisitionFunction.yaml
+++ b/inputs/YAML Samples/components/AcquisitionFunction.yaml
@@ -1,4 +1,6 @@
 Exhaustive Search:
+  ignoreProtectedAreas: true
+  ignoreWastelands: true
   proportionSearched: '1.0'
 -------
 Hill-Climber Acquisition:
