--- a/inputs/YAML Samples/components/Regulation.yaml
+++ b/inputs/YAML Samples/components/Regulation.yaml
@@ -76,6 +76,7 @@ Multi-Quotas from Map:
   quotaExchangedPerMatch: {
     }
   quotaType: ITQ
+  respectMPA: true
 -------
 Single Species Threshold Taxation:
   biomassThreshold: '5000000.0'
