--- a/build.gradle
+++ b/build.gradle
@@ -48,9 +48,7 @@ dependencies
     //a jury-rigged version of OSMOSE, hopefully linkable with this simulation
     compile fileTree(dir: 'libs/osmose', include: '*.jar')
 
-    //guava. Useful for PreConditions and sometimes specialized collections
-    compile "com.google.guava:guava:19.0"
-    compile "com.google.code.findbugs:jsr305:3.0.2"
+
     //metawidget + apache binders. Useful for the gui
     compile "org.metawidget.modules:metawidget-all:4.1"
     compile "commons-beanutils:commons-beanutils:1.8.3"
@@ -85,6 +83,10 @@ dependencies
     //burlap : Reinforcement Learning helper
     compile group: 'edu.brown.cs.burlap', name: 'burlap', version: '3.0.1'
 
+    //discrete choosers
+    compile fileTree(dir: 'libs/discrete-choosers', include: '*.jar')
+
+
     //annotations
     compile group: 'com.intellij', name: 'annotations', version: '12.0'
 
@@ -92,7 +94,9 @@ dependencies
     testCompile "junit:junit:4.12"
     testCompile "org.mockito:mockito-all:1.9.5"
 
-
+    //guava. Useful for PreConditions and sometimes specialized collections
+    compile "com.google.guava:guava:23.0"
+    compile "com.google.code.findbugs:jsr305:3.0.2"
 
 
 }
