Some more work on the pyramids allocators and other biomass resetters for a demo for Matt

--- a/inputs/YAML Samples/components/GearStrategy.yaml
+++ b/inputs/YAML Samples/components/GearStrategy.yaml
@@ -29,3 +29,12 @@ Periodic Gear Update Catchability:
   shockSize: '0.05'
   yearly: true
 -------
+Periodic Gear Update Selectivity:
+  maxPercentageChangeA: 0.1
+  maxPercentageChangeB: 0.1
+  probability:
+    Fixed Probability:
+      explorationProbability: '0.2'
+      imitationProbability: '0.6'
+  yearly: false
+-------
