Small modifications on the bandit algorithms (whether they are allowed to imitate or not), removed biomass resetter as default plugin and in general cleaned up the synthesis paper generator

--- a/inputs/YAML Samples/components/DestinationStrategy.yaml
+++ b/inputs/YAML Samples/components/DestinationStrategy.yaml
@@ -122,6 +122,7 @@ Discretized Bandit:
     Squared Discretization:
       horizontalSplits: '2.0'
       verticalSplits: '2.0'
+  imitate: false
 -------
 Florida Longliner:
   automaticallyAvoidMPA: true
@@ -266,6 +267,7 @@ Replicator:
         Squared Discretization:
           horizontalSplits: '2.0'
           verticalSplits: '2.0'
+      imitate: false
   - GSA:
       explorationSize: '20.0'
       gravitationalConstant: '100.0'
