--- a/inputs/paper_synthesis/avoid_the_line.yaml
+++ b/inputs/paper_synthesis/avoid_the_line.yaml
@@ -1,15 +1,15 @@
 Abstract:
   biologyInitializer:
-    Diffusing Logistic:
-      carryingCapacity: '5000.0'
+    Two Species Box:
+      boxHeight: '20.0'
+      boxWidth: '20.0'
       differentialPercentageToMove: '0.001'
-      grower:
-        Independent Logistic Grower:
-          steepness: uniform 0.6 0.8
-      maxInitialCapacity: '1.0'
-      minInitialCapacity: '0.0'
+      firstSpeciesCapacity: '5000.0'
+      lowestX: '15.0'
+      lowestY: '15.0'
       percentageLimitOnDailyMovement: '0.01'
-      speciesName: Species 0
+      ratioFirstToSecondSpecies: '1.0'
+      species0InsideTheBox: true
   cheaters: false
   departingStrategy:
     Fixed Rest:
@@ -17,12 +17,10 @@ Abstract:
   destinationStrategy:
     Imitator-Explorator:
       alwaysCopyBest: true
-      automaticallyIgnoreAreasWhereFishNeverGrows: false
       automaticallyIgnoreMPAs: false
       backtracksOnBadExploration: true
       dropInUtilityNeededForUnfriend: '-1.0'
       ignoreEdgeDirection: true
-      ignoreFailedTrips: false
       objectiveFunction:
         Hourly Profit Objective:
           opportunityCosts: true
@@ -33,7 +31,6 @@ Abstract:
           imitationProbability: '1.0'
           incrementMultiplier: '0.02'
       stepSize: uniform 1.0 10.0
-  discardingStrategy: No Discarding
   enginePower: normal 5000.0 100.0
   fishers: 100
   fishingStrategy:
@@ -52,14 +49,12 @@ Abstract:
   habitatInitializer: All Sand
   holdSize: '100.0'
   literPerKilometer: '10.0'
-  logbook: No Logbook
   mapInitializer:
     Simple Map:
       cellSizeInKilometers: '10.0'
-      coastalRoughness: '4.0'
+      coastalRoughness: '0'
       depthSmoothing: '1000000.0'
       height: '50.0'
-      maxLandWidth: '10.0'
       width: '50.0'
   mapMakerDedicatedRandomSeed: null
   market:
@@ -67,22 +62,16 @@ Abstract:
       marketPrice: '10.0'
   networkBuilder:
     Equal Out Degree:
-      allowMutualFriendships: true
-      degree: '2.0'
-      equalOutDegree: true
-  plugins: [
-    ]
-  portPositionX: -1
-  portPositionY: -1
+      degree: 2
+  portPositionX: 40
+  portPositionY: 25
   ports: 1
   regulation:
     MPA Only:
-      startingMPAs: [
-        ]
+      startingMPAs: []
   speedInKmh: '5.0'
-  startingMPAs: [
-    ]
-  usePredictors: false
+  startingMPAs:  [{'width': 15, 'topLeftX': 17, 'topLeftY': 17, 'height': 15}]
+  usePredictors: true
   weatherInitializer:
     Constant Weather:
       temperature: '30.0'
