--- a/inputs/YAML Samples/components/DestinationStrategy.yaml
+++ b/inputs/YAML Samples/components/DestinationStrategy.yaml
@@ -81,7 +81,7 @@ SNALSAR:
   profit:
     Remembered Profits:
       includeOpportunityCosts: true
-  safety: Socially Acceptable Everywhere
+  safety: Safe Everywhere
   sociallyAcceptable: Nobody Fishes Here
 -------
 Heatmap Based:
@@ -272,6 +272,7 @@ Perfect RPUE Logit:
   automaticallyAvoidMPA: true
   automaticallyAvoidWastelands: true
   discretizer: Identity Discretization
+  hoursOut: '120.0'
   profitBeta: '1.0'
 -------
 Replicator:
