--- a/build.gradle
+++ b/build.gradle
@@ -235,14 +235,6 @@ task algorithms(type:JavaExec){
     classpath = sourceSets.main.runtimeClasspath
 }
 
-//scenario = "tofill"
-////this task can be called as ./gradlew buildSampleFiles and simply rebuilds the "YAML Samples" folder
-//task indirectinference(type: JavaExec){
-//    classpath = sourceSets.main.runtimeClasspath
-//    main = 'uk.ac.ox.oxfish.experiments.IndirectInferencePaper'
-//    args = ["$scenario"]
-//}
-
 task batch(type:JavaExec){
     main = 'uk.ac.ox.oxfish.gui.BatchRunnerSetup'
     classpath = sourceSets.main.runtimeClasspath
@@ -256,6 +248,11 @@ test {
   }
 }
 
+
+buildScan {
+    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
+    termsOfServiceAgree = 'yes'
+}
 
 idea{
     project {
